force-app/main/default/objects/AI_Engine_Config__c/AI_Engine_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
<description>Hierarchy Custom Setting storing AI engine configuration including LLM endpoint, cloud environment type, feature flags, and operational parameters. All admin-configurable, zero hard-coded values.</description>
    <label>AI Engine Config</label>
</CustomObject>