force-app/main/default/objects/AI_Engine_Config__c/fields/Callout_Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Callout_Timeout_Seconds__c</fullName>
    <description>Maximum seconds to wait for Node.js backend response before timeout. Default: 120. Salesforce max: 120.</description>
    <label>Callout Timeout (Seconds)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>