force-app/main/default/objects/AI_Engine_Config__c/fields/Cloud_Environment__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Environment__c</fullName>
    <description>Auto-detected cloud environment type. Set by AQE_CloudDetector on package install. Options: Standard_Salesforce, CPQ_Cloud, Revenue_Cloud</description>
    <label>Cloud Environment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>