force-app/main/default/objects/AI_Engine_Config__c/fields/Enable_PII_Tokenisation__c.field-meta.xml
<CustomField>
    <fullName>Enable_PII_Tokenisation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, all PII is stripped and replaced with anonymous tokens before any data reaches the LLM. Strongly recommended for production.</description>
    <label>Enable PII Tokenisation</label>
    <type>Checkbox</type>
</CustomField>