force-app/main/default/objects/AI_Engine_Config__c/fields/Engine_Active__c.field-meta.xml
<CustomField>
    <fullName>Engine_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master switch for the AI engine. When disabled, all AI quote generation is blocked and a maintenance message is shown.</description>
    <label>Engine Active</label>
    <type>Checkbox</type>
</CustomField>