force-app/main/default/objects/AI_Engine_Config__c/fields/LLM_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>LLM_Endpoint_URL__c</fullName>
    <description>Node.js middleware endpoint URL. Leave blank to use Named Credential AQE_Backend.</description>
    <label>LLM Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>