force-app/main/default/objects/AI_Engine_Config__c/fields/LLM_Model__c.field-meta.xml
<CustomField>
    <fullName>LLM_Model__c</fullName>
    <description>LLM model identifier to use for quote generation. e.g. claude-sonnet-4-6, gpt-4o. Passed to Node.js middleware.</description>
    <label>LLM Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>