force-app/main/default/objects/AI_Engine_Config__c/fields/Max_Quote_Lines__c.field-meta.xml
<CustomField>
    <fullName>Max_Quote_Lines__c</fullName>
    <description>Maximum number of quote lines before switching from sync to async bulk processing. Default: 30.</description>
    <label>Max Quote Lines (Sync)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>